added my portfolio

--- a/index.html
+++ b/index.html
@@ -3,9 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Portfolio</title>
 </head>
 <body>
-    <h1>welcome to HTML Training</h1>
+    <!--Header section-->
+    <header>
+        <h1>Welcome to My Portfolio</h1>
+        <p>Full Stack Developer</p>
+    </header>
+
+    <!--About Section-->
+    <section id ="about">
+        <h2>About Me</h2>
+        <p>
+            I am a passionate developer with expertise in java, MySQL and web technologies. Currently Enhancing my skills in full-Stack development
+        </p>    
+    </section>
+
+    <!--Projects section-->
+    <section id = "project">
+        <h2>Projects</h2>
+
+        <!--Project 1-->
+        <div class="project">
+            <h3>Real-Time Loan Analysis</h3>
+            <p>Developed using MySQL. This Project involves analysing loan data to provide real-time insights.</p>
+        </div>
+
+        <!--Project 2-->
+        <div class ="project">
+            <h3>Java Servlet Application</h3>
+            <p>A Java-based web application using servlets to manage user data and interations.</p>
+        </div>
+    </section>
+
+    <!--Contact Section-->
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p> Email: nafiasyed25@gmail.com</p>
+        <p> Github: <a href="NafiaSyed.github.io/">Github</a></p>
+
+    </section>
+
+    <!--Footer section-->
+    <Footer>
+        <p>&copy: 2024 My Portfolio. All Rights Reserved.</p>
+    </Footer>
 </body>
 </html>
