--- a/formfields.html
+++ b/formfields.html
@@ -9,6 +9,7 @@
     <form>
         <label>UserName</label>
         <input type="text" name="user_name" placeholder="Name" required>
+        <label>Passwords</label><input type="password" required>
     </form>
 </body>
 </html>
